# micro

./: Cargo.toml  README.md  asm-cm7-r0p1.s  asm-v7.s  asm.s  build.rs
src/: Cargo.toml  interrupt.rs  lib.rs
src/common/: asm.rs  clockspeed.rs  frequency.rs  macros.rs  mod.rs  register.rs  timestamp.rs
src/common/config/: mod.rs  spi.rs
src/common/enums/: mod.rs  state.rs  trigger.rs
src/common/enums/extilines/: mod.rs
src/common/enums/extilines/stm32/: mod.rs  stm32f0.rs  stm32f1.rs  stm32f2.rs  stm32f3.rs  stm32f4.rs  stm32f7.rs
src/common/enums/gpio/: af.rs  mod.rs  pins.rs  portconfig.rs
src/common/enums/i2c/: errors.rs  flags.rs  interrupts.rs  mod.rs
src/common/enums/rcc/: mod.rs
src/common/enums/rcc/stm32/: clocks.rs  interrupts.rs  mco.rs  mod.rs  peripherals.rs  registers.rs
src/common/enums/spi/: errors.rs  flags.rs  interrupt.rs  mod.rs
src/common/enums/tim/: channel.rs  filter.rs  icconfig.rs  interrupts.rs  mod.rs  polarity.rs  prescaler.rs  slavemode.rs  trigger.rs
src/common/structs/: clockcfg.rs  clocks.rs  mod.rs  pins.rs
src/peripherals/: mod.rs
src/peripherals/core/: cbp.rs  cpuid.rs  dcb.rs  dwt.rs  fpb.rs  fpu.rs  guard.rs  itm.rs  mod.rs  mpu.rs  nvic.rs  scb.rs  syst.rs  tpiu.rs
src/peripherals/extended/: advtim.rs  crc.rs  exti.rs  flashiface.rs  gpio.rs  i2c.rs  iwdg.rs  mod.rs  pwr.rs  rcc.rs  rtc.rs  spi.rs  timers.rs  wwdg.rs
src/peripherals/extended/rcc/: helper.rs  mod.rs
