[package]
name = "micro"
version = "0.1.0"
authors = ["spcan <agrc14@gmail.com>"]

[dependencies]

[features]
advanced-use = []
ahb2 = []
ahb3 = ["ahb2"]
clock_gates = []
default = ["advanced-use"]
double_exti = []
fpu = []
pllsai = []
plli2s = []
single_exti = []


stm32f0 = ["double_exti"]
stm32f1 = ["single_exti"]
stm32f4 = ["fpu", "single_exti", "ahb2"]

stm32f411 = ["stm32f4", "plli2s", "ahb2"]
stm32f410 = ["stm32f4"]
stm32f401 = ["stm32f4"]
stm32f412 = ["stm32f4"]
stm32f4x3 = ["stm32f4"]
stm32f4x5 = ["stm32f4"]
stm32f4x7 = ["stm32f4"]
stm32f4x9 = ["stm32f4"]
stm32f446 = ["stm32f4"]

stm32f100 = ["stm32f1"]