[package]
name = "micro"
version = "0.1.0"
authors = ["spcan <agrc14@gmail.com>"]

[dependencies]

[dependencies.spin]
version = "0.5.0"

[dependencies.lazy_static]
version = "1.3.0"

[features]
bit32 = []
bit16 = []
bit8 = []
advanced-use = []
stm32f411 = ["bit32", "stm32f4"]
default = ["advanced-use"]
mpu = []
stm32f4 = []